pkg/lang/testdata/ub/body-meta/valid/resource-configuration.ub
resources: { aws.vpc.this: { @configuration: aws.east } }
