pkg/lang/testdata/ub/body-meta/invalid/resource-unknown.ub
resources: { aws.vpc.this: { @bogus: 1 } }
